# valentina-python-client

./: .gitignore  .pre-commit-config.yaml  .typos.toml  .yamllint.yml  CHANGELOG.md  CLAUDE.md  README.md  committed.toml  duties.py  pyproject.toml  zensical.toml
.claude/: settings.json
.claude/skills/documentation-writer/: SKILL.md
.cursor/: mcp.json
.cursor/commands/: add-documentation.md  add-error-handling.md  cleanup_tests.md  debug-issue.md  fix-git-issues.md  generate-commit-message.md  light-review-current-diffs.md  perform-code-review.md  refactor-code.md  review-project-documentation.md  rewrite-docstrings.md  write-unit-tests.md
.cursor/rules/: api_pydantic_models.mdc  bash_style.mdc  documentation.mdc  git-commit-message-rules.md  git_commit_messages.mdc  global-coding-standards.md  global_coding_style.mdc  inline-comments-standards.md  inline_comments.mdc  pytest_rules.mdc  python-git-workflow.md  python-packaging.md  python-standards.md  python-testing-standards.md  python_best_practices.mdc  python_class_style.mdc  python_docstrings.mdc  python_exceptions.mdc  python_naming_conventions.mdc  python_preferred_tools.mdc  python_typing.mdc  run_lint_after_changes.mdc  shell_working_directory.mdc  use_uv.mdc
.github/workflows/: commit-linter.yml  create-release.yml  deploy-docs.yml  manual_pypy_publish.yml  reusable-tests.yml
.glue/: manifest.json
.glue/rules/: git-commit-message-rules.md  python-standards.md  python-testing-standards.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
docs/: campaign-book-chapters-service.md  campaign-books-service.md  campaigns-service.md  character-autogen-service.md  character-blueprint-service.md  character-traits-service.md  character_autogeneration.md  characters-service.md  code-review-2026-02-13.md  companies-service.md  configuration.md  developers-service.md  dicerolls-service.md  dicerolls.md  dictionary-service.md  dictionary.md  errors.md  global-admin-service.md  index.md  models.md  options-service.md  sync-client.md  system-service.md  testing.md  users-service.md
docs/models/: audit_logs.md  campaign_books.md  campaign_chapters.md  campaigns.md  character_blueprint.md  character_traits.md  characters.md  companies.md  developers.md  dice_rolls.md  dictionary.md  index.md  shared.md  user_lookup.md  users.md
docs/plans/: 2026-02-04-dx-improvements-design.md  2026-02-04-dx-improvements-implementation.md  2026-02-19-structured-logging-design.md  2026-02-19-structured-logging-plan.md  2026-02-22-asset-listing-methods-design.md  2026-02-22-asset-listing-methods.md
docs/services/: campaign_books.md  campaign_chapters.md  campaigns.md  character_autogen.md  character_blueprint.md  character_traits.md  characters.md  companies.md  developers.md  dice_rolls.md  dictionary.md  global_admin.md  identity.md  index.md  options.md  system.md  user_lookup.md  user_self_registration.md  users.md
scripts/: test_sync_client.py  validate_constants.py
src/vclient/: __init__.py  _codegen.py  client.py  config.py  constants.py  endpoints.py  exceptions.py  registry.py  validate_constants.py
src/vclient/_sync/: __init__.py  client.py  registry.py
src/vclient/api/: __init__.py  client.py  config.py  constants.py  endpoints.py  exceptions.py  registry.py
src/vclient/models/: __init__.py  audit_logs.py  books.py  campaigns.py  chapters.py  character_autogen.py  character_blueprint.py  character_trait.py  characters.py  companies.py  developers.py  diceroll.py  dictionary.py  full_sheet.py  global_admin.py  pagination.py  shared.py  system.py  user_lookup.py  users.py
src/vclient/services/: __init__.py  _audit_params.py  base.py  campaign_book_chapters.py  campaign_books.py  campaigns.py  character_autogen.py  character_blueprint.py  character_traits.py  characters.py  companies.py  developers.py  dicerolls.py  dictionary.py  diecrolls.py  global_admin.py  identity.py  options.py  system.py  user_lookup.py  user_self_registration.py  users.py
src/vclient/testing/: __init__.py  _client.py  _factories.py  _router.py  _routes.py
tests/: __init__.py  conftest.py  shared_response_fixtures.py
tests/api/: __init__.py  conftest.py  test_base_service.py  test_client.py  test_companies_models.py  test_companies_service.py  test_config.py  test_developers_models.py  test_developers_service.py  test_exceptions.py  test_global_admin_models.py  test_pagination.py  test_registry.py  test_system_models.py  test_users_service.py
tests/integration/: __init__.py  conftest.py  test_client.py  test_logging.py  test_sync_client.py
tests/integration/services/: __init__.py  test_base.py  test_campaign_book_chapters.py  test_campaign_books.py  test_campaigns.py  test_character_autogen.py  test_character_blueprint.py  test_character_traits.py  test_characters.py  test_companies.py  test_companies_audit_logs.py  test_developers.py  test_dicerolls.py  test_dictionary.py  test_global_admin.py  test_global_admin_audit_logs.py  test_global_admin_logs.py  test_identity.py  test_options.py  test_system.py  test_user_lookup.py  test_user_self_registration.py  test_users.py
tests/integration/testing/: __init__.py  test_fake_client.py  test_fake_client_logs.py  test_routes.py  test_sync_fake_client.py  test_sync_routes.py
tests/unit/: __init__.py  conftest.py  test_codegen.py  test_config.py  test_exceptions.py  test_registry.py  test_validate_constants.py
tests/unit/models/: __init__.py  test_audit_logs.py  test_books.py  test_campaigns.py  test_chapters.py  test_character_blueprint.py  test_character_trait.py  test_characters.py  test_companies.py  test_developers.py  test_full_sheet.py  test_global_admin.py  test_pagination.py  test_shared.py  test_system.py  test_user_lookup.py  test_users.py
tests/unit/services/: __init__.py  test_global_admin.py
tests/unit/testing/: __init__.py  test_factories.py  test_router.py  (+1 more)
vclient-guide-skill/: SKILL.md
vclient-guide-skill/references/: constants.md  error-handling.md  models.md  services.md
(+36 files in other folders)
