[project]
    authors = [{ name = "Nate Landau", email = "github@natenate.org" }]
    classifiers = [
        "Programming Language :: Python :: 3.13",
        "Programming Language :: Python :: 3.14",
    ]
    dependencies = ["anyio>=4.12.1", "httpx>=0.28.1", "loguru>=0.7.3", "pydantic[email]>=2.12.5"]
    description = "Async Python client library for the Valentina Noir API"
    license = { file = "LICENSE" }
    name = "valentina-python-client"
    readme = "README.md"
    requires-python = ">=3.13"
    version = "1.5.0"

    [project.urls]
        Homepage   = "https://docs.valentina-noir.com/python-api-client/"
        Repository = "https://github.com/natelandau/valentina-python-client"

[build-system]
    build-backend = "uv_build"
    requires      = ["uv_build>=0.9.26,<0.10.0"]

[tool.uv.build-backend]
    module-name = "vclient"

[dependency-groups]
    dev = [
        "commitizen>=4.13.8",
        "coverage>=7.13.4",
        "duty>=1.9.0",
        "prek>=0.3.3",
        "pytest-anyio>=0.0.0",
        "pytest-clarity>=1.0.1",
        "pytest-cov>=7.0.0",
        "pytest-devtools>=1.0.0",
        "pytest-mock>=3.15.1",
        "pytest-repeat>=0.9.4",
        "pytest-sugar>=1.1.1",
        "pytest-xdist>=3.8.0",
        "pytest>=9.0.2",
        "respx>=0.22.0",
        "ruff>=0.15.2",
        "shellcheck-py>=0.11.0.1",
        "ty>=0.0.17",
        "typos>=1.43.5",
        "vulture>=2.14",
        "yamllint>=1.38.0",
    ]
    docs = ["zensical>=0.0.23"]

[tool.commitizen]
    bump_message               = "bump(release): v$current_version → v$new_version"
    changelog_merge_prerelease = true
    tag_format                 = "v$version"
    update_changelog_on_bump   = true
    version_files              = ["src/vclient/__init__.py:__version__"]
    version_provider           = "uv"

[tool.coverage.report] # https://coverage.readthedocs.io/en/latest/config.html#report
    exclude_lines = [
        'def __repr__',
        'except [\w\s\._]+ as .*:',
        'if TYPE_CHECKING',
        'pragma: no cover',
        'raise Abort',
        'raise Exit',
    ]
    fail_under = 0
    precision = 1
    show_missing = true
    skip_covered = true
    skip_empty = true

[tool.coverage.run]
    branch       = true
    command_line = "--module pytest"
    data_file    = ".cache/coverage"
    omit         = ["tests/*"]
    source       = ["src"]

[tool.coverage.xml]
    output = ".cache/coverage.xml"

[tool.pytest.ini_options]

    addopts        = "--color=yes --doctest-modules --strict-config --strict-markers -n auto --dist loadfile"
    cache_dir      = ".cache/pytest"
    filterwarnings = ['error', 'ignore:.*Pydantic.*:UserWarning', 'ignore::DeprecationWarning:']
    markers        = ["serial"]
    testpaths      = ["tests"]
    xfail_strict   = true

[tool.ruff] # https://github.com/charliermarsh/ruff

    exclude        = [".cache", ".dev", ".git", ".venv", ".worktrees", "_build", "_site", "build", "dist"]
    fix            = true
    line-length    = 100
    output-format  = "grouped"
    src            = ["src", "tests"]
    target-version = "py313"
    [tool.ruff.lint]
        ignore = [
            "ANN002",  # Missing type annotation for `*args`
            "ANN003",  # Missing type annotation for `**kwargs`
            "ANN204",  # missing return type annotation for special method `__init__`
            "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed,
            "B006",    # mutable-argument-default
            "B008",    # function-call-in-default-argument
            "COM812",  # Trailing comma missing"
            "CPY001",  # Missing copyright notice at top of file
            "D107",    # undocumented-public-init
            "E501",    # line-too-long
            "PLC0415", # Imports should be at top of file
            # "FBT001", # Boolean-typed positional argument in function definition
            # "FBT002", # Boolean-typed positional argument in function definition
            "E711",   # Comparison to `None` should be `cond is None`
            "E712",   # use of `== False` instead of `is False`
            "FIX002", # Line contains TODO, consider resolving the issue
            "S311",   # suspicious-non-cryptographic-random-usage
            "TD001",  # invalid-todo-tag
            "TD002",  # Missing author in TODO
            "TD003",  # Missing issue link on the line following this TODO
        ]
        per-file-ignores = { "scripts/*.py" = [
            "INP001", # Implicit namespace package (no __init__.py needed)
            "T201",   # print() is intentional for CLI output
        ], "src/vclient/services/*.py" = [
            "PLR0913", # Too many arguments
        ], "src/vclient/validate_constants.py" = [
            "T201", # print() is intentional for report output
        ], "tests/**/*.py" = [
            "A002",
            "A003",
            "ANN001",  # Missing type annotation for function argument `cls`
            "ANN002",  # Missing type annotation for `*args`
            "ANN003",  # Missing type annotation for `**kwargs`
            "ANN201",  # Missing return type annotation
            "ARG001",  # Unused function argument
            "ARG002",  # Unused method argument
            "ARG005",  # Unused lambda argument
            "D102",
            "ERA001",  # Commented out code
            "F403",
            "F405",    # May be undefined from type imports
            "FBT001",  # Boolean-typed positional argument in function definition
            "PGH003",  # Use specific rule codes when ignoring type issues
            "PLC0415", # Imports should be at top of file
            "PLR0913",
            "PLR2004",
            "PT011",   # set the `match` parameter or use a more specific exception
            "S101",
            "SLF001",  # Calling private method
            "W292",    # No blank line at end of file - included b/c cursor struggles to add a trailing newline and burns through requests trying to fix this linting error.
        ] }
        select = ["ALL"]
        unfixable = [
            "ERA001", # Commented out code
            "F401",   # unused-import
            "F841",   # unused-variable
        ]

        [tool.ruff.lint.mccabe]
            # Unlike Flake8, default to a complexity level of 10.
            max-complexity = 10

        [tool.ruff.lint.isort]
            combine-as-imports = true

        [tool.ruff.lint.pydocstyle]
            convention = "google"

        [tool.ruff.lint.pylint]
            max-args = 6

    [tool.ruff.format]
        indent-style              = "space"
        line-ending               = "auto"
        quote-style               = "double"
        skip-magic-trailing-comma = false

[tool.vulture]
    exclude           = ["duties.py", "scripts/", "tests/", "tmp/"]
    ignore_decorators = []
    ignore_names      = []
    make_whitelist    = false
    min_confidence    = 100
    paths             = ["src/"]
    sort_by_size      = true
    verbose           = false
